mise en place sécurité controller et twig

--- a/templates/back/main/index.html.twig
+++ b/templates/back/main/index.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Welcome BackOffice{% endblock %}
+{% block title %}Welcome Backoffice{% endblock %}
 
 {% block body %}
+    {% if is_granted('ROLE_MANAGER') %}
+        {% include 'back/partials/_card_link.html.twig' with { 'entity' : 'movie' } %}
+    {% endif %}
 
-    {% include "back/partials/_card_link.html.twig" with { 'entity' : 'movie' } %}
-    {% include "back/partials/_card_link.html.twig" with { 'entity' : 'season' } %}
-    {% include "back/partials/_card_link.html.twig" with { 'entity' : 'casting' } %}
-
+    {% include 'back/partials/_card_link.html.twig' with { 'entity' : 'season' } %}
+    {% include 'back/partials/_card_link.html.twig' with { 'entity' : 'casting' } %}
 {% endblock %}
