--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     <!-- Our custom CSS -->
     <link rel="stylesheet" href="{{ asset('css/oflix.css') }}">
     <!-- favicon -->
-    <link rel="shortcut icon" href="{{ asset('favicon.png') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ asset('favicon1.png') }}" type="image/x-icon">
 
     <title>{% block title %}O'flix{% endblock %}</title>
 </head>
