--- a/templates/partials/_fullnav.html.twig
+++ b/templates/partials/_fullnav.html.twig
@@ -7,7 +7,7 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
     <nav class="navbar navbar-expand-lg navbar-dark {% if isBackOffice %}bg-success{% else %}bg-dark{% endif %}">
         <div class="container-fluid">
             <a href="{{path('default')}}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
-                <img src="{{ asset('favicon.png') }}" height="24" alt="Logo O'flix">
+                <img src="{{ asset('favicon1.png') }}" height="24" alt="Logo O'flix">
                 <span class="header-logo__title">O'flix</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -45,12 +45,12 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                            <li><a class="dropdown-item" href="{{ path('app_logout')}}">Déconnexion</a></li>
                         </ul>
                     </li>
                 </ul>
 
-                <button type="button" class="btn btn-danger me-2">Connexion</button>
+                <a href="{{ path('app_login') }}"><button type="button" class="btn btn-danger me-2">Connexion</button></a>
 
                 <form class="d-flex" action="list.html">
                     <input class="form-control form-control-sm me-2" name="search" type="search" placeholder="Rechercher...">
