--- a/templates/front/main/home.html.twig
+++ b/templates/front/main/home.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <!-- main -->
     <div class="my-5 py-5 text-center">
-        <img src="favicon.png" height="100" alt="Logo O'flix" class="mb-3">
+        <img src="{{ asset('favicon1.png') }}" height="100" alt="Logo O'flix" class="mb-3">
         <h1 class="display-6 fw-bold">Films, séries TV et popcorn en illimité.</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4 text-muted">Où que vous soyez. Gratuit pour toujours.</p>
