--- a/templates/back/movie/index.html.twig
+++ b/templates/back/movie/index.html.twig
@@ -5,7 +5,9 @@
 {% block body %}
     <h1>Liste des films / séries</h1>
 
+    {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ path('app_back_movie_new') }}" class="btn btn-success">Ajouter un film / une série</a>
+    {% endif %}
 
     <table class="table">
         <thead>
@@ -42,7 +44,11 @@
                 <td>
                     <a href="{{ path('app_back_movie_show', {'id': movie.id}) }}" class="btn btn-primary">Voir</a>
 
+                    {# Si l'utilisateur est ADMIN alors il a accès au lien #}
+                    {% if is_granted('ROLE_ADMIN') %}
                     <a href="{{ path('app_back_movie_edit', {'id': movie.id}) }}" class="btn btn-warning">edit</a>
+                    {% endif %}
+
                 </td>
             </tr>
         {% else %}
