--- a/templates/back/movie/show.html.twig
+++ b/templates/back/movie/show.html.twig
@@ -48,7 +48,11 @@
 
     <a href="{{ path('app_back_movie_index') }}" class="btn btn-primary">retour à la liste</a>
 
+    {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ path('app_back_movie_edit', {'id': movie.id}) }}" class="btn btn-warning">Modifier</a>
+    
 
     {{ include('back/movie/_delete_form.html.twig') }}
+    {% endif %}
+
 {% endblock %}
