--- a/templates/front/favorites/favorites.html.twig
+++ b/templates/front/favorites/favorites.html.twig
@@ -10,9 +10,6 @@
 
             <h2 class="text-muted fw-bold mb-4">Ma liste</h2>
 
-            
-            {{dump(movie)}}
-
             {% if movie is empty %}
                 <em>vous n'avez pas encore de favoris</em>
             {% else %}
@@ -34,7 +31,7 @@
                         <strong class="d-inline-block mb-2 text-primary">{{ movie.type.name }}</strong>
                         <h3 class="mb-1">{{ movie.title }}</h3>
                         <div class="mb-1 text-muted">{{ movie.duration }} min</div>
-                        <a href="./show.html" class="fs-1 mt-3 text-danger align-self-start">
+                        <a href="{{path ('app_front_show_movie', {"id": movie.id})}}" class="fs-1 mt-3 text-danger align-self-start">
                             <i class="bi bi-arrow-right-square"></i>
                         </a>
                     </div>
