service favoris full

--- a/templates/front/favorites/favorites.html.twig
+++ b/templates/front/favorites/favorites.html.twig
@@ -9,15 +9,15 @@
         <div class="row mb-2">
 
             <h2 class="text-muted fw-bold mb-4">Ma liste</h2>
-
-            {% if movie is empty %}
-                <em>vous n'avez pas encore de favoris</em>
-            {% else %}
            
+            {% for movie in movies %}
+
+            {#
             <div class="alert alert-success alert-dismissible fade show" role="alert">
                 <strong>{{movie.title}}</strong> a été ajouté à votre liste de favoris.
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
+            #}
 
             <div class="col-6">
 
@@ -38,12 +38,16 @@
                 </div>
             
             </div>
-            {% endif %}
 
+            {% else %}
+                <em>vous n'avez pas encore de favoris</em>
+
+            {% endfor %}
+           
         </div>
         
         <div class="col">
-            <a href="" class="btn btn-danger btn-sm" onclick="return confirm('Vider votre liste de favoris ?');">Vider la liste</a>
+            <a href="{{path ('app_front_favorites_clear')}}" class="btn btn-danger btn-sm" onclick="return confirm('Vider votre liste de favoris ?');">Vider la liste</a>
         </div>
 
     </div>
