--- a/templates/front/main/home.html.twig
+++ b/templates/front/main/home.html.twig
@@ -50,7 +50,12 @@
                         <!-- img src="https://m.media-amazon.com/images/M/MV5BNThmZGY4NzgtMTM4OC00NzNkLWEwNmEtMjdhMGY5YTc1NDE4XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_SX300.jpg" class="img-fluid" -->
                     </div>
                     <div class="col-8 p-4 d-flex flex-column position-static">
-                        <a href="{{path('app_front_favorites_movies_add', {"id": movie.id})}}" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-plus"></i></a>
+                    
+                        {# 
+                        <a href="{{ path('app_front_favorites_add', {"id": movie.id}) }}" class="movie__favorite fs-1 my-2 mx-3 link-danger"><i class="bi bi-bookmark-plus"></i></a>
+                        #}
+                        {% include "front/partials/_favorites.html.twig" with {'movieIDForPartial': movie.id}  %}
+
                         <strong class="d-inline-block mb-2 text-primary">{{ movie.type.name }}</strong>
                         <h3 class="mb-1">{{ movie.title }}</h3>
                         <div class="mb-1 text-muted">{{ movie.duration }} min</div>
