--- a/templates/front/main/show.html.twig
+++ b/templates/front/main/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
         <!-- main -->
     {# movieForTwig #}
-        {% dump(movieForTwig) %}
+        {# {% dump(movieForTwig) %} #}
         {#App\Entity\Movie {85 ▼
                 -id: 1
                 -title: "The jungle BOOK"
