--- a/templates/front/review/create.html.twig
+++ b/templates/front/review/create.html.twig
@@ -20,8 +20,7 @@
                     {{form_row(formulaire.rating)}}
                     {{form_row(formulaire.reactions)}}
                     {{form_row(formulaire.watchedAt)}}
-
-                    <button type="submit" class="btn btn-primary">Validation</button>
+                    <input type="submit" class="btn btn-primary" value="Ajouter">
 
                 {{form_end(formulaire)}}
         
