--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -4,14 +4,13 @@
 <div class="container my-4">
     <div class="my-5 py-5 text-center">
 
-
 		
-		<h1 class="fw-bold display-1">4<img src="{{ asset('favicon1.png') }}" height="100" alt="Logo O'flix" class="mb-3">4</h1>
+		<h1 class="fw-bold display-1">4<img src="{{ asset('favicon.png') }}" height="100" alt="Logo O'flix" class="mb-3">4</h1>
         <div class="col-lg-6 mx-auto">
 			<h2 class="lead mb-4 text-muted">Oups, I did it again...</h2>
-            <p class="display-6 mb-4">{{ exception.message }}<p>
+            <p class="display-6 mb-4">{{ status_text }}<p>
 		</div>
-        	
+
 	</div>
 </div>
 
