--- a/templates/back/movie/edit.html.twig
+++ b/templates/back/movie/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Modification des informations</h1>
 
-    {{ include('back/movie/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/movie/_form.html.twig', {'button_label': 'Mise à jour'}) }}
 
     <a href="{{ path('app_back_movie_index') }}" class="btn btn-primary">retour à la liste / Annuler les modifications</a>
 
