--- a/templates/back/casting/edit.html.twig
+++ b/templates/back/casting/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Edit Casting</h1>
 
-    {{ include('back/casting/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/casting/_form.html.twig', {'button_label': 'Mise à jour'}) }}
 
     <a href="{{ path('app_back_casting_index') }}">back to list</a>
 
