--- a/templates/back/season/edit.html.twig
+++ b/templates/back/season/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Modification des saisons</h1>
 
-    {{ include('back/season/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/season/_form.html.twig', {'button_label': 'Mise à jour'}) }}
 
     <a href="{{ path('app_back_season_index') }}" class="btn btn-primary">Retour à la liste</a>
 
