--- a/templates/front/user/edit.html.twig
+++ b/templates/front/user/edit.html.twig
@@ -1,13 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modification du profil{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
 
-    {{ include('front/user/_form.html.twig', {'button_label': 'Update'}) }}
+<div class="container-md bg-light my-5 d-flex p-5">
+    <div class="row m-auto">
 
-    <a href="{{ path('default') }}">back to list</a>
+        <div class="col">
+            <h1>Modification du profil</h1>
 
-    {{ include('front/user/_delete_form.html.twig') }}
+            {{ include('front/user/_form.html.twig', {'button_label': 'Mise à jour'}) }}
+
+            <a href="{{ path('default') }}" class="btn btn-primary btn-md">retour</a>
+
+            {{ include('front/user/_delete_form.html.twig') }}
 {% endblock %}
