--- a/templates/front/user/show.html.twig
+++ b/templates/front/user/show.html.twig
@@ -3,40 +3,34 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Mot de passe</th>
-                <td>{{ user.password }}</td>
-            </tr>
-            <tr>
-                <th>Prénom</th>
-                <td>{{ user.firstname }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ user.lastname }}</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="container-md bg-light my-5 d-flex p-5">
+    <div class="row m-auto">
 
-    <a href="{{ path('default') }}">Retour à l'acceuil</a>
+        <div class="col">
+            <h1>Détails du profil</h1>
 
-    <a href="{{ path('app_front_user_edit', {'id': user.id}) }}">Modifier mon profil</a>
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <th>Prénom</th>
+                        <td>{{ user.firstname }}</td>
+                    </tr>
+                    <tr>
+                        <th>Nom</th>
+                        <td>{{ user.lastname }}</td>
+                    </tr>
+                    <tr>
+                        <th>Email</th>
+                        <td>{{ user.email }}</td>
+                    </tr>
+                    
+                </tbody>
+            </table>
 
-    {{ include('front/user/_delete_form.html.twig') }}
+            <a href="{{ path('default') }}" class="btn btn-primary btn-md mb-2">Retour à l'acceuil</a>
+
+            <a href="{{ path('app_front_user_edit', {'id': user.id}) }}"class="btn btn-success btn-md mb-2">Modifier mon profil</a>
+
+            {{ include('front/user/_delete_form.html.twig') }}
 {% endblock %}
