--- a/templates/partials/_fullnav.html.twig
+++ b/templates/partials/_fullnav.html.twig
@@ -39,6 +39,9 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
                         <li class="nav-item">
                             <a class="nav-link {{ app.request.get('_route') == 'app_front_favorites_movies' ? 'active' : '' }}" href="{{path('app_front_favorites_movies')}}"><i class="bi bi-bookmark"></i> Ma liste</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link {{ app.request.get('_route') == 'app_front_user_new' ? 'active' : '' }}" href="{{path('app_front_user_new')}}"><i class="bi bi-bookmark"></i> s'inscrire</a>
+                        </li>
                     {% endif %}
 
                 </ul>
@@ -50,17 +53,19 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown">
 
-                            <span>{{app.user.email}}</span>
+                            <span>Bienvenue {{app.user.firstname}}</span>
                                                      
                             <i class="bi bi-person-square"></i>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Profil</a></li>
+                            <li><a class="dropdown-item" href="{{ path ('app_front_user_show', {'id': app.user.id})}}">Profil</a></li>
                             <li>
                                 {% if isBackOffice %}
                                     <a class="dropdown-item" href="{{ path('default')}}">Frontoffice</a>                                  
                                 {% else %}
-                                    <a class="dropdown-item" href="{{ path('app_back_default')}}">Backoffice</a>
+                                    {% if is_granted("ROLE_ADMIN", "ROLE_MANAGER") %}
+                                        <a class="dropdown-item" href="{{ path('app_back_default')}}">Backoffice</a>
+                                    {% endif %}
                                 {% endif %}
                             </li>
                             <li><hr class="dropdown-divider"></li> 
@@ -78,7 +83,7 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
                 </ul>
             {% endif %}
 
-                {# Si je suis connecté affiche le bouton CONNEXION #}
+                {# Si je suis connecté affiche le bouton DECONNEXION #}
                 {% if is_granted("IS_AUTHENTICATED_FULLY")%}
                     <a href="{{ path('app_logout') }}"><button type="button" class="btn btn-danger me-2">Déconnexion</button></a>
                     
