--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,13 @@
 <!-- footer -->
     <footer class="container-fluid py-4 border-top text-center">
         <span class="text-muted">O'flix made with &hearts; at O'clock !
-            <br><small>Thème :<a href="" class="link-secondary text-decoration-none"><i class="bi bi-toggle-on mx-1"></i>Netflix</a></small></a>
+        {% if isBackOffice %}
+        
+        {% else %}
+            <br><small>Thème :<a href=" {{ path ('app_front_theme')}}" class="link-secondary text-decoration-none"><i class="bi bi-toggle-on mx-1"></i>Netflix</a></small></a>
+        {% endif %}
+        
+            
         </span>
     </footer>
 
