Update public repository

--- a/templates/partials/_fullnav.html.twig
+++ b/templates/partials/_fullnav.html.twig
@@ -13,8 +13,8 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
 
         <div class="container-fluid">
             <a href="{{path('default')}}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
-                <img src="{{ asset('favicon1.png') }}" height="24" alt="Logo O'flix">
-                <span class="header-logo__title">O'flix</span>
+                <img src="{{ asset('favicon1.png') }}" height="24" alt="Logo Cinastar">
+                <span class="header-logo__title">Cinastar</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent">
@@ -114,8 +114,8 @@ c'est vraiment une inclusion du code HTML/twig de cette vue
 
         <div class="container-fluid">
             <a href="{{path('default')}}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none header-logo">
-                <img src="{{ asset('favicon1.png') }}" height="24" alt="Logo O'flix">
-                <span class="header-logo__title">O'flix</span>
+                <img src="{{ asset('favicon1.png') }}" height="24" alt="Logo Cinastar">
+                <span class="header-logo__title">Cinastar</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent">
